--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -4,16 +4,9 @@
 
 .wrapper {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     background-color: var(--navbarBackgroundColor);
-
-    @include breakpoint-min(map.get($breakpoints, "xl")) {
-        flex-direction: column;
-        height: 100vh;
-        position: fixed;
-        border-top-right-radius: 2rem;
-    }
 }
 
 .logo {
@@ -27,20 +20,9 @@
     align-items: center;
     gap: 1.5rem;
     padding: 1.25rem 1.5rem;
-
-    @include breakpoint-min(map.get($breakpoints, "xl")) {
-        flex-direction: column;
-    }
 }
 
 .imgWrapper {
-    @include breakpoint-max(map.get($breakpoints, "xl")) {
-        padding-left: 1.5rem;
-        border-left: 1px solid #494e6e;
-    }
-
-    @include breakpoint-min(map.get($breakpoints, "xl")) {
-        border-top: 1px solid #494e6e;
-        padding-top: 1.5rem;
-    }
+    padding-left: 1.5rem;
+    border-left: 1px solid #494e6e;
 }
